--- a/index.html
+++ b/index.html
@@ -127,8 +127,10 @@
   </li>
   -->
   <li><p>Haowen Chen, Fengxiang He, <strong>Shiye Lei</strong>, Dacheng Tao. <q>Spectral complexity-scaled generalisation bound of complex-valued neural networks.</q> <em>Artificial Intelligence</em>, 2023. <a href="https://nemorrow.github.io/paper/chen2023spectral.pdf">[paper]</a> <a href="https://github.com/LeavesLei/cvnn_generalization">[code]</a></p></li>
-  <li><p><strong>Shiye Lei</strong>, Zhuozhuo Tu, Leszek Rutkowski, Feng Zhou, Li Shen, Fengxiang He, Dacheng Tao. &quot;Spatial-Temporal-Fusion BNN: Variational Bayesian Feature Layer.&quot; <em>arXiv preprint</em> arXiv:2112.06281, 2021.</p></li>
-  <li><p>Fengxiang He*, <strong>Shiye Lei</strong>*, Jianmin Ji, and Dacheng Tao. &quot;Neural networks behave as hash encoders: An empirical study.&quot; <em>arXiv preprint</em> arXiv:2101.05490. 2021. </p></li>
+  <li><p><strong>Shiye Lei</strong>, Dacheng Tao. <q>A Comprehensive Survey of Dataset Distillation.</q> <em>Preprint</em>. <a href="https://nemorrow.github.io/paper/lei2023comprehensive.pdf">[paper]</a> </p></li>
+  <li><p><strong>Shiye Lei</strong>, Fengxiang He, Yancheng Yuan, Dacheng Tao. <q>Understanding deep learning via decision boundary.</q> <em>Preprint</em>. <a href="https://nemorrow.github.io/paper/lei2022understanding.pdf">[paper]</a> </p></li>
+  <li><p><strong>Shiye Lei</strong>, Zhuozhuo Tu, Leszek Rutkowski, Feng Zhou, Li Shen, Fengxiang He, Dacheng Tao. <q>Spatial-Temporal-Fusion BNN: Variational Bayesian Feature Layer.</q> <em>Preprint</em>. <a href="https://nemorrow.github.io/paper/lei2022understanding.pdf">[paper]</a></p></li>
+  <li><p>Fengxiang He*, <strong>Shiye Lei</strong>*, Jianmin Ji, and Dacheng Tao. <q>Neural networks behave as hash encoders: An empirical study.</q> <em>Preprint</em>. <a href="https://nemorrow.github.io/paper/lei2022understanding.pdf">[paper]</a> </p></li>
 * Co-first authors.
 </ul>
         
